--- a/index.html
+++ b/index.html
@@ -24,5 +24,43 @@
             <button type="button">Sign Up Now!</button>
         </div>
     </div>
+
+    <div class="second-box">
+        <h2>Some Random Information</h2>
+        <div class="media-object">
+            <img src="" alt="">
+            <p>This is some subext under an illustration or image</p>
+        </div>
+        <div class="media-object"></div>
+            <img src="" alt="">
+            <p>This is some subext under an illustration or image</p>
+        </div>
+        <div class="media-object"></div>
+            <img src="" alt="">
+            <p>This is some subext under an illustration or image</p>
+        </div>
+        <div class="media-object"></div>
+            <img src="" alt="">
+            <p>This is some subext under an illustration or image</p>
+        </div>
+    </div>
+
+    <div class="third-box">
+        <p class="quote">This is an inspiring quote, or a testimonial from a 
+        customer. Maybe its just filling up space or maybe people will actually 
+        read it. Who knows? All I know is that it looks nice.</p>
+        <p class="Author">-Thor, God of Thunder</p>
+    </div>
+
+    <div class="fourth-box">
+        <div class="content">
+            <h5>Call to action! It's Time!</h5>
+            <p>Sign up for this thing by clicking that button right over there</p>
+        </div>
+        <button type="button">Sign Up!</button>
+    </div>
+
+    <div class="footer"> Copyright - Utsav Umang 2024</div>
+
 </body>
 </html>
