Complete basic layout of page and add images

--- a/index.html
+++ b/index.html
@@ -9,53 +9,55 @@
 <body>
     <nav>
         <ul>
-            <li> <a href="#">Header Logo </a> </li>
-            <li> <a href="#">Header Link 1 </a> </li>
-            <li> <a href="#">Header Link 2 </a> </li>
-            <li> <a href="#">Header Link 3 </a> </li>
+            <li class="logo"> <a href="#">Utsav Umang </a> </li>
+            <li> <a href="#">About</a> </li>
+            <li> <a href="#">Projects </a> </li>
+            <li class="last"> <a href="#">Contact </a> </li>
+
         </ul>
     </nav>
 
     <div class="first-box">
-        <div class="image"></div>
+        <div class="image"> <img src="/Media/utsav-speaking.jpg"></div>
         <div class="content">
-            <h2>This Website is Awesome!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem vero possimus maxime. Ipsum, odit ab!</p>
-            <button type="button">Sign Up Now!</button>
+            <h2>Hi There! I am Utsav Umang</h2>
+            <p>Well, to begin with, I am an aspiring Web Developer. And just for mentioning, I am also into ML and CP!</p>
+            <button type="button">Say Hi!</button>
         </div>
     </div>
 
     <div class="second-box">
-        <h2>Some Random Information</h2>
-        <div class="media-object">
-            <img src="" alt="">
-            <p>This is some subext under an illustration or image</p>
-        </div>
-        <div class="media-object"></div>
-            <img src="" alt="">
-            <p>This is some subext under an illustration or image</p>
-        </div>
-        <div class="media-object"></div>
-            <img src="" alt="">
-            <p>This is some subext under an illustration or image</p>
-        </div>
-        <div class="media-object"></div>
-            <img src="" alt="">
-            <p>This is some subext under an illustration or image</p>
+        <h2>Some Stuff That I Do</h2>
+        <div class="second-box-tiles">
+            <div class="media-object">
+                <img src="Media/ml.jpg">
+                <p>Machine Learning in Scikit-Learn, Tensorflow and Keras</p>
+            </div>
+            <div class="media-object">
+                <img src="Media/cp.jpg">
+                <p>Competitve Programming is something I love!</p>
+            </div>
+            <div class="media-object">
+                <img src="Media/linux.jpg">
+                <p>Using CLI and Ubuntu for all my development</p>
+            </div>
+            <div class="media-object">
+                <img src="Media/webd.jpg">
+                <p>...and of course, Web Development</p>
+            </div>
         </div>
     </div>
 
     <div class="third-box">
-        <p class="quote">This is an inspiring quote, or a testimonial from a 
-        customer. Maybe its just filling up space or maybe people will actually 
-        read it. Who knows? All I know is that it looks nice.</p>
-        <p class="Author">-Thor, God of Thunder</p>
+        <p class="quote">Won't vouch for anything else, but certainly Utsav is an
+            amazing programmer! Okay slightly overrated but still!</p>
+        <p class="Author">-Utsav's Ex (first one)</p>
     </div>
 
     <div class="fourth-box">
         <div class="content">
-            <h5>Call to action! It's Time!</h5>
-            <p>Sign up for this thing by clicking that button right over there</p>
+            <h5>Lets Connect!</h5>
+            <p>This button will be functional soon</p>
         </div>
         <button type="button">Sign Up!</button>
     </div>
