test image index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
 
     <div class="first-box">
-        <div class="image"> <img src="/Media/utsav-speaking.jpg"></div>
+        <div class="image"> <img src="/Media/ml.jpg"></div>
         <div class="content">
             <h2>Hi There! I am Utsav Umang</h2>
             <p>Well, to begin with, I am an aspiring Web Developer. And just for mentioning, I am also into ML and CP!</p>
